--- a/gameUi.ui
+++ b/gameUi.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1280</width>
+    <height>720</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="fourPlayerStart">
+   <widget class="QPushButton" name="button_fourPlayerStart">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>410</x>
+      <y>340</y>
       <width>241</width>
       <height>71</height>
      </rect>
@@ -27,31 +27,160 @@
      <string>4 Player Start</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="mainMenu">
+   <widget class="QFrame" name="frame_currentPlayerInfo">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>10</y>
-      <width>121</width>
-      <height>31</height>
+      <x>0</x>
+      <y>0</y>
+      <width>1280</width>
+      <height>720</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Main Menu</string>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
     </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label_currPlayerName">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>171</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <italic>true</italic>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Player  :</string>
+     </property>
+     <property name="scaledContents">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_mainMenu">
+     <property name="geometry">
+      <rect>
+       <x>1140</x>
+       <y>10</y>
+       <width>121</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Main Menu</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_movePlayer">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>190</y>
+       <width>241</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Roll Dice</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_nextPlayer">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>190</y>
+       <width>241</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>End Turn</string>
+     </property>
+    </widget>
+    <widget class="QFrame" name="frame_Player1">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>500</y>
+       <width>491</width>
+       <height>141</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="frame_Player1_2">
+     <property name="geometry">
+      <rect>
+       <x>630</x>
+       <y>210</y>
+       <width>491</width>
+       <height>141</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+    </widget>
+    <zorder>label_currPlayerName</zorder>
+    <zorder>button_mainMenu</zorder>
+    <zorder>button_movePlayer</zorder>
+    <zorder>button_nextPlayer</zorder>
+    <zorder>frame_currentPlayerInfo_2</zorder>
+    <zorder>frame_currentPlayerInfo_2</zorder>
+    <zorder>frame_currentPlayerInfo_2</zorder>
+    <zorder>frame_Player1</zorder>
+    <zorder>frame_Player1_2</zorder>
    </widget>
+   <zorder>frame_currentPlayerInfo</zorder>
+   <zorder>button_fourPlayerStart</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1280</width>
      <height>25</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
  </widget>
  <resources/>
  <connections/>
