--- a/gameUi.ui
+++ b/gameUi.ui
@@ -42,30 +42,6 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_currPlayerName">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>10</y>
-       <width>171</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <italic>true</italic>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Player  :</string>
-     </property>
-     <property name="scaledContents">
-      <bool>false</bool>
-     </property>
-    </widget>
     <widget class="QPushButton" name="button_mainMenu">
      <property name="geometry">
       <rect>
@@ -79,7 +55,7 @@
       <string>Main Menu</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="button_movePlayer">
+    <widget class="QPushButton" name="button_playerAction">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -114,12 +90,12 @@
       <string>End Turn</string>
      </property>
     </widget>
-    <widget class="QFrame" name="frame_Player1">
+    <widget class="QFrame" name="frame_playerInfo">
      <property name="geometry">
       <rect>
-       <x>340</x>
-       <y>500</y>
-       <width>491</width>
+       <x>10</x>
+       <y>10</y>
+       <width>471</width>
        <height>141</height>
       </rect>
      </property>
@@ -129,32 +105,70 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
+     <widget class="QLabel" name="label_currPlayerName">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>171</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <italic>true</italic>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Player  :</string>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_playerInfo">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>191</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Player Info...</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_playerInfo2">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>30</y>
+        <width>221</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Player Info...</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+     </widget>
     </widget>
-    <widget class="QFrame" name="frame_Player1_2">
-     <property name="geometry">
-      <rect>
-       <x>630</x>
-       <y>210</y>
-       <width>491</width>
-       <height>141</height>
-      </rect>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-    </widget>
-    <zorder>label_currPlayerName</zorder>
     <zorder>button_mainMenu</zorder>
-    <zorder>button_movePlayer</zorder>
+    <zorder>button_playerAction</zorder>
     <zorder>button_nextPlayer</zorder>
     <zorder>frame_currentPlayerInfo_2</zorder>
     <zorder>frame_currentPlayerInfo_2</zorder>
     <zorder>frame_currentPlayerInfo_2</zorder>
-    <zorder>frame_Player1</zorder>
-    <zorder>frame_Player1_2</zorder>
+    <zorder>frame_playerInfo</zorder>
    </widget>
    <zorder>frame_currentPlayerInfo</zorder>
    <zorder>button_fourPlayerStart</zorder>
