updates player info on close

--- a/detailView.ui
+++ b/detailView.ui
@@ -82,6 +82,25 @@
      <string>Close</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="button_upgrade">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>240</y>
+      <width>71</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Upgrade</string>
+    </property>
+   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
